# src/routes/index.ts
@@ -6,6 +6,7 @@ import { balancesRouter } from "../modules/balances/balances.routes";
 import { usersRouter } from "../modules/users/users.routes";
 import { transactionsRouter } from "../modules/transactions/transactions.routes";
 import { quotesRouter } from "../modules/exchange/quotes.routes";
+import { ratesRouter } from "../modules/exchange/rates.routes";
 
 const router = Router();
 
@@ -16,5 +17,6 @@ router.use("/balances", balancesRouter);
 router.use("/users", usersRouter);
 router.use("/transactions", transactionsRouter);
 router.use("/exchange", quotesRouter);
+router.use("/exchange", ratesRouter);
 
 export default router;
